# mobility-map

./: .env.example  .gitignore  .mise.toml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
applications/detect-residential-buildings/: Cargo.toml
applications/detect-residential-buildings/src/: main.rs
applications/frontend-worker/: Cargo.toml
applications/gtfs-importer/: Cargo.toml
applications/import-gtfs-data/: Cargo.toml
applications/import-gtfs-data/src/: main.rs
applications/import-osm-data/: Cargo.toml
applications/import-osm-data/src/: main.rs
applications/migrate-database/: Cargo.toml
applications/migrate-database/src/: main.rs
applications/mobility-map/: Cargo.toml
applications/mobility-map/src/: main.rs
applications/run-county-analyzer/: Cargo.toml
applications/run-county-analyzer/src/: main.rs
applications/run-frontend/: Cargo.toml  package.json  tsconfig.json
applications/run-frontend/scss/: mobility-map.scss
applications/run-frontend/src/: main.rs
applications/run-frontend/src/scss/: style.scss
applications/run-frontend/src/typescript/: mobility-map.ts
applications/run-frontend/static/css/: style.css  style.css.map
applications/run-frontend/templates/: base.html  index.html
applications/run-frontend/typescript/: accessible_area.ts  mobility-map.ts
applications/run-migrations/: Cargo.toml
applications/run-migrations/src/: main.rs
applications/run-stop-analyzer/: Cargo.toml
applications/run-stop-analyzer/src/: main.rs
components/analyze-county/: Cargo.toml
components/analyzers/: Cargo.toml
components/analyzers/src/: county.rs  lib.rs  residential_buildings.rs  stop.rs
components/cli/: Cargo.toml
components/cli/src/: analyzer.rs  frontend.rs  import.rs  lib.rs  migrate.rs
components/cli/src/import/: mod.rs  osm_data.rs
components/common/: Cargo.toml
components/common/src/: batches.rs  database.rs  distances.rs  lib.rs  logging.rs  prelude.rs  timer.rs
components/database_connection/: Cargo.toml
components/database_connection/src/: lib.rs
components/frontend/: Cargo.toml  package-lock.json  rollup.config.js
components/frontend/src/: lib.rs  listener.rs  prelude.rs  router.rs  server.rs
components/frontend/src/routes/: accessible_area.rs  index.rs  mod.rs
components/frontend/templates/: base.html
components/frontend/typescript/: mobility-map.ts
components/gtfs/: Cargo.toml
components/gtfs/src/: importer.rs  lib.rs  stop.rs  stop_time.rs  time_parser.rs
components/importers/: Cargo.toml
components/importers/src/: gtfs.rs  lib.rs  osm.rs  stop.rs  stop_time.rs  time_parser.rs
components/jobs/: Cargo.toml
components/jobs/src/: county.rs  job.rs  lib.rs  stop.rs
migrations/: 20241121160518_inital_structure.down.sql  20241121160518_inital_structure.up.sql  20241208111645_counties.down.sql  20241208111645_counties.up.sql  20250124140109_stop_cycle.down.sql  20250124140109_stop_cycle.up.sql  20250124145236_stop_stats.down.sql  20250124145236_stop_stats.up.sql  20250126174520_counties.up.sql
run-stop-analyzer/: Cargo.toml
scripts/: build-assets  download-osm-data  import-osm-data  install-all-applications  install-all-packages  mobility-flex.lua
