[workspace]
members = [
    "applications/migrate-database",
    "applications/import-osm-data",
    "applications/import-gtfs-data",
    "applications/run-stop-analyzer",
    "applications/run-county-analyzer",
    # "applications/run-state-analyzer",
    # "applications/run-country-analyzer",
    "applications/run-frontend",
    # "applications/run-csv-exporter",

    "components/common",
    "components/importers",
    "components/analyzers",
    "components/jobs",
    # "components/cli",
    ]
resolver="2"

[workspace.dependencies]
log                = { version = "0.4.22" }
tracing            = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18",  features = ["env-filter"] }
uuid               = { version = "1.15.1",  features = ["v4"] }
tokio              = { version = "1",       features = ["full"] }
sqlx               = { version = "0.8",     features = [ "runtime-tokio", "postgres" ] }
apalis             = { version = "0.6.4",   features = ["tracing", "catch-panic"] }
apalis-sql         = { version = "0.6.4",   features = [ "postgres" ] }
anyhow             = { version = "1.0.93",  features = ["std", "backtrace"] }
itertools          = { version = "0.14.0" }
serde              = { version = "1.0.215", features = ["derive"] }
serde_json         = { version = "1.0.140" }
futures            = { version = "0.3.31" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
