[package]
name = "import-osm-data"
version = "0.1.0"
edition = "2021"

[dependencies]
common  = { path = "../../components/common" }
importers  = { path = "../../components/importers" }
analyze = { path = "../../components/analyzers" }

tokio.workspace              = true
tracing-subscriber.workspace = true
tracing.workspace            = true
