[package]
name = "mobility-map"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../components/common" }
cli    = { path = "../../components/cli" }

tracing-subscriber.workspace = true
tracing.workspace            = true
tokio.workspace              = true

clap = { version = "4.5.27", features = ["derive"] }
