[package]
name = "run-stop-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
common  = { path = "../../components/common" }
jobs  = { path = "../../components/jobs" }

tokio.workspace              = true
tracing-subscriber.workspace = true
tracing.workspace            = true

clap = { version = "4.5.27", features = ["derive"] }
