[package]
name = "cli"
version = "0.0.1"
edition = "2021"

[dependencies]
common    = { path = "../../components/common" }
jobs      = { path = "../../components/jobs" }
importers = { path = "../../components/importers" }
analyzers = { path = "../../components/analyzers" }
frontend  = { path = "../../components/frontend" }


tokio.workspace = true
# sqlx.workspace = true
tracing.workspace = true
log.workspace = true
# apalis.workspace = true
# apalis-sql.workspace = true
# serde.workspace = true
# anyhow.workspace = true
# futures.workspace = true
