[package]
name = "gtfs"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
chrono = { version = "0.4.38", features = ["serde"] }
common = { path = "../common" }
csv = "1.3.1"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
zip = "2.2.1"
